<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="2dp"
	android:gravity="center">

	<TextView
		android:id="@+id/dialogTitle"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_alignParentTop="true"
		android:layout_margin="10dp"
		android:alpha=".87"
		android:gravity="center"
		android:text="@string/your_help"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textStyle="bold" />


	<TextView
		android:id="@+id/tv_message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/dialogTitle"
		android:layout_margin="10dp"
		android:layout_marginBottom="30dp"
		android:alpha=".87"
		android:text="@string/app_help_message"
		android:textAppearance="?android:attr/textAppearanceSmall" />

	<com.gc.materialdesign.views.ButtonFlat
		android:id="@+id/dialogButtonOk"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/tv_message"
		android:layout_marginBottom="10dp"
		android:layout_marginRight="10dp"
		android:alpha=".87"
		android:text="@string/buy_beer" />

	<TextView
		android:id="@+id/tv_message_2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/dialogButtonOk"
		android:layout_margin="10dp"
		android:layout_marginBottom="30dp"
		android:alpha=".87"
		android:text="@string/app_help_message_2"
		android:textAppearance="?android:attr/textAppearanceSmall" />

	<com.gc.materialdesign.views.ButtonFlat
		android:id="@+id/dialogButtonComment"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/tv_message_2"
		android:layout_marginBottom="10dp"
		android:layout_marginRight="10dp"
		android:alpha=".87"
		android:text="@string/write_comment" />

</RelativeLayout>

