<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingLeft="2dp"
	android:paddingRight="2dp">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/itemsLinearLayout1Title">

			<ImageView
				android:layout_height="25dp"
				android:layout_width="25dp"
				android:id="@+id/itemsImageViewMark"
				android:layout_marginRight="10dp"
				android:src="@drawable/mark_grey"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"/>

			<ImageView
				android:layout_height="25dp"
				android:layout_width="25dp"
				android:background="@drawable/movie"
				android:id="@+id/ivVideo"
				android:visibility="gone"
				android:layout_marginRight="10dp"
				android:layout_toLeftOf="@id/itemsImageViewMark"
				android:layout_centerVertical="true"
				android:layout_marginLeft="10dp"/>

			<TextView
				android:id="@+id/txtTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_toLeftOf="@id/ivVideo"
				android:maxLines="3"

				android:paddingLeft="10dp"
				android:paddingTop="1dp"
				android:text="Text"
				android:textSize="14sp"
				android:textStyle="bold" />

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:orientation="horizontal"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="2dp">

			<TextView
				android:id="@+id/txtNick"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha=".54"
				android:gravity="center"
				android:text="Text"
				android:textColor="?android:attr/textColorSecondary"
				android:textSize="12sp" />



		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"

			android:paddingLeft="10dp"
			android:paddingRight="10dp">

			<TextView
				android:id="@+id/txtCity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:alpha=".54"
				android:gravity="center"
				android:text="Text"
				android:textSize="10sp" />

			<TextView
				android:id="@+id/txtDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="false"
				android:layout_toRightOf="@+id/txtCity"
				android:alpha=".54"
				android:gravity="center"
				android:text="Text"
				android:textSize="10sp" />

		</RelativeLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:id="@+id/itemsLinearLayout1">

			<TextView
				android:id="@+id/txtText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:maxLines="3"
				android:paddingBottom="5dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:paddingTop="5dp"
				android:text="Text" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:orientation="horizontal"
			android:paddingLeft="10dp"
			android:paddingRight="10dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha=".87"
				android:gravity="center"
				android:text="@string/views"
				android:textSize="10sp" />

			<TextView
				android:id="@+id/txtViews"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:alpha=".87"
				android:gravity="center"
				android:text="VIE"
				android:textSize="10sp" />

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:background="?android:attr/dividerHorizontal" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:alpha=".87"
				android:gravity="center"
				android:text="@string/answers"
				android:textSize="10sp" />

			<TextView
				android:id="@+id/txtAnswers"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha=".87"
				android:gravity="center"
				android:text="ANS"
				android:textSize="10sp" />

		</LinearLayout>

		<View
			android:layout_height="0dp"
			android:layout_width="match_parent" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:orientation="horizontal"
			android:paddingLeft="10dp"
			android:paddingRight="10dp">

			<TextView
				android:id="@+id/itemsTextViewLastAnswer"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="2dp"
				android:alpha=".87"
				android:gravity="center"
				android:text="@string/last_answer"
				android:textSize="10sp" />

			<TextView
				android:id="@+id/txtLast"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="2dp"
				android:alpha=".87"
				android:gravity="center"
				android:paddingLeft="4dp"
				android:paddingRight="4dp"
				android:text="LastDate"
				android:textSize="10sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/txtLastUser"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:alpha=".87"
				android:gravity="center"
				android:text="LastUser"
				android:textSize="10sp" />

		</LinearLayout>

	</LinearLayout>

	<View
		android:layout_height="2dp"
		android:layout_width="match_parent"/>

</LinearLayout>

